# windows-game

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_WINDOWS.md
assets/: NOTICE_FONTS.md
data/: client.prefs  server.sqlite  server.sqlite-shm  server.sqlite-wal
include/: AuthManager.h  Bot.h  ChatMessage.h  ChatRoom.h  ConnectScreen.h  Crypto.h  EmbeddedServer.h  Game.h  I18n.h  LeaderEntry.h  Leaderboard.h  LocalMatch.h  LoginScreen.h  Maps.h  MatchResult.h  Menu.h  NetClient.h  Paths.h  PlatformNet.h  Protocol.h  SoloMenu.h  Store.h  Throwable.h  TlsConn.h  UiTheme.h  User.h  Weapon.h
mac/: AppIcon.icns  ClaudeGame.entitlements  Info.plist.in  build-mac-app.sh  build-raylib-universal.sh  make-icon-png.py  make-icon.sh
server/: Match.cpp  Match.h  Server.cpp  Server.h  main.cpp
src/: AuthManager.cpp  Bot.cpp  ChatRoom.cpp  ConnectScreen.cpp  Crypto.cpp  EmbeddedServer.cpp  Game.cpp  I18n.cpp  Leaderboard.cpp  LocalMatch.cpp  LoginScreen.cpp  Maps.cpp  Menu.cpp  NetClient.cpp  Paths.cpp  Protocol.cpp  SoloMenu.cpp  Store.cpp  TlsConn.cpp  UiTheme.cpp  main.cpp
windows/: build-mingw.bat  build-msvc.bat  cross-build-from-mac.sh  mingw-w64-x86_64.cmake  vcpkg.json
